[tool.poetry]
name = "roz-remembers"
version = "0.1.0"
description = "A generic, message-driven state management library."
authors = ["Jesse Stone <jesse@stonedogcode.com>"] 
license = "MPL-2.0 license" 
readme = "README.md"
homepage = "https://github.com/jesse-stonedog/roz-remembers"
repository = "https://github.com/jesse-stonedog/roz-remembers"
keywords = ["state-management", "redux", "asyncio", "event-driven"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0" # For testing
pytest-asyncio = "^0.23.0"
black = "^24.0" # For code formatting
isort = "^5.10" # For import sorting
flake8 = "^7.0" # For linting

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.mypy_cache
  | \.pytest_cache
  | \.hypothesis
  | __pycache__
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
src_paths = ["src", "tests"]